Fix bad z-index

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -265,7 +265,7 @@ html,body {
                     bottom: 0;
                     left: 0;
                     right: 0;
-                    z-index:9999;
+                    z-index:1050;
 
                     &.cart-fulfilled {
                         background-color:$success-color;
@@ -772,7 +772,7 @@ html,body {
 }
 .fixed-action-btn,
 #confirm-fab{
-    z-index: 1000;
+    z-index: 1001;
 }
 @media #{$small-and-down} {
     form {
